Trying to fix vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,3 @@
-{ "version": 2, "rewrites": [{ "source": "/src/(.*)", "destination": "/api" }] }
+{
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+}
