--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "string-session-generator-bot",
-  "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "start": "bun src/index.ts",
-    "dev": "bun --watch src/index.ts"
-  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^4.17.21"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@t3-oss/env-core": "^0.11.0",
     "express": "^4.19.2",
     "grammy": "^1.28.0",
     "telegram": "^2.23.2",
+    "tsup": "^8.2.4",
+    "tsx": "^4.16.5",
     "zod": "^3.23.8"
   }
 }
